# magik-analysis

./: .gitignore  README.md  pyproject.toml
documents/: STRATEGY_REFERENCE.md
mage/src/: analysis.py  btc-rsi.csv  cache_data.py  main.py  out.txt  results.out  rsi.csv
mage/src/Analysis/: Analysis.py  AnalysisSimulator.py  time_boxed_high_low.py
mage/src/Analysis/resources/: RSIHighLowAnalysis.json  Test.json  TradingSessionAHighRSIPredictBTrendingUp.json
mage/src/Analysis/results/: 6B.FUT.csv  BTC.FUT.csv  BTC_HL_RSI.xls
mage/src/ApiClients/: AlphaVantageClient.py  LocalFiles.py
mage/src/Indicators/: Custom.py  SessionBased.py  Volume.py
mage/src/Resources/: data-mappings.json
mage/src/Resources/test-data/: ETHE-DAILY.json  GBTC-DAILY.json  GLD-DAILY.json  HRC.FUT-1h.json  MHG.FUT-1h.json  SLV-DAILY.json  SPY-DAILY.json  TSLA-DAILY.json
mage/src/Services/: ActionManager.py  AnalysisEngine.py  AnalysisJsonParser.py  BacktestEngine copy.py  BacktestEngine.py  BacktestService.py  CSVService.py  DataPrepService.py  DataSamplingService.py  LocalDataCaching.py  Logger.py  LogicEngine.py  OrderBook.py  OrderExecutionService.py  Portfolio.py  TA.py  TestingDetails.py  TradingReport.py  TradingStrategyFactory.py  TransformMappingService.py  VariableTable.py
mage/src/Services/DTO/: ActionResult.py  BacktestConfig.py  OpenPosition.py  Report.py
mage/src/Strategies/DTO/: Signal.py  (+23 more)
mage/src/Utils/: data_utils.py  file_utils.py  futures_utils.py  json_utils.py  math_utils.py  transforms.py
mage/test/: test_strategy_parsing.py
mage/test/resources/: Test.json
(+22 files in other folders)
